Fit education onto first page. Comply with resumego scoring.

--- a/altacv.cls
+++ b/altacv.cls
@@ -298,14 +298,18 @@
 
 % v1.1.4: fixes inconsistent font size
 \newcommand{\cvevent}[4]{%
-  {\large\color{emphasis}#1\par}
+  {\large\color{emphasis}#1%
+    \hfill
+    \ifstrequal{#3}{}{}{{\small\makebox[0.25\linewidth][l]{\faCalendar~#3}}}%
+    \par}
   \smallskip\normalsize
   \ifstrequal{#2}{}{}{
-  \textbf{\color{accent}#2}\par
+  \textbf{\color{accent}#2}
+  \hfill
+  \ifstrequal{#4}{}{}{{\small\makebox[0.25\linewidth][l]{\faMapMarker~#4}}}%
+  \par
   \smallskip}
-  \ifstrequal{#3}{}{}{{\small\makebox[0.5\linewidth][l]{\faCalendar~#3}}}%
-  \ifstrequal{#4}{}{}{{\small\makebox[0.5\linewidth][l]{\faMapMarker~#4}}}\par
-  \medskip\normalsize
+  \normalsize
 }
 
 \newcommand{\cvachievement}[3]{%
